--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
 
   <!-- 頂部導覽列 -->
   <header class="nav">
-    <a class="brand" href="/">惡意流量模擬與防禦測試平台</a>
+    <a class="brand" href="/">模擬驗證 IDS/IPS 防禦效能之研究</a>
     {% if session is defined and session.get('user') %}
       <span style="color:#334155;">你好，{{ session.get('user') }}</span>
       <form method="post" action="/logout" style="margin:0;">
